Complement recover tool handler
