# api/swagger/report/v1/swagger.json
@@ -222,6 +222,50 @@
                     }
                 }
             }
+        },
+        "/tool/recover": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Платежные средства"
+                ],
+                "summary": "Установить платежное средство готовым к восстановлению",
+                "parameters": [
+                    {
+                        "description": "Тело запроса",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.toolRecoverRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешный ответ",
+                        "schema": {
+                            "$ref": "#/definitions/v1.toolRecoverResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "Ответ с ошибкой",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -525,6 +569,62 @@
                     "items": {
                         "$ref": "#/definitions/v1.tool"
                     }
+                }
+            }
+        },
+        "v1.toolRecoverRequest": {
+            "type": "object",
+            "required": [
+                "client_id",
+                "external_method",
+                "id",
+                "lang_code",
+                "user_id"
+            ],
+            "properties": {
+                "client_id": {
+                    "description": "Идентификатор клиента",
+                    "type": "integer",
+                    "example": 1
+                },
+                "external_method": {
+                    "description": "Внутренний код платежного метода платежной системы, к которой относится платежное средство",
+                    "type": "string",
+                    "example": "yookassa_bank_card"
+                },
+                "id": {
+                    "description": "Идентификатор платежного средства",
+                    "type": "string",
+                    "example": "2dc32aa0-000f-5000-8000-16d7bc6cd09f"
+                },
+                "lang_code": {
+                    "description": "Код языка, обозначение по RFC 5646",
+                    "type": "string",
+                    "example": "en"
+                },
+                "user_id": {
+                    "description": "Идентификатор специалиста поддержки",
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "v1.toolRecoverResponse": {
+            "type": "object",
+            "required": [
+                "message",
+                "success"
+            ],
+            "properties": {
+                "message": {
+                    "description": "Сообщение, которое необходимо показать специалисту техподдержки",
+                    "type": "string",
+                    "example": "Платежное средство удалено."
+                },
+                "success": {
+                    "description": "Результат обработки запроса (всегда true)",
+                    "type": "boolean",
+                    "example": true
                 }
             }
         }
